<resources>
    <string name="app_name">PsychologicalControl</string>
    <string name="all">Все</string>
    <string name="job">Работа</string>
    <string name="favorite">Личное</string>
    <string name="left_menu">Левое меню</string>
    <string name="tasks_menu">Меню задач</string>
    <string name="calendar_menu">Клендарь</string>
    <string name="profile">Профиль</string>
    <string name="plus">+</string>
    <string name="hint_text">Введите здесь новую задачу</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="login">Логин</string>
    <string name="registration">Регистрация</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
</resources>