<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/left_menu"
        android:textColorSecondary="@color/active_menu"
        android:title="@string/left_menu"
        android:icon="@drawable/align_justify"
        app:showAsAction="ifRoom"
        android:enabled="true"/>
    <item android:id="@+id/tasks_menu"
        android:title="@string/tasks_menu"
        android:icon="@drawable/book_03"
        app:showAsAction="ifRoom"
        android:enabled="true"/>
    <item android:id="@+id/calendar_menu"
        android:title="@string/calendar_menu"
        android:icon="@drawable/calendar_day"
        app:showAsAction="ifRoom"
        android:enabled="true"/>
    <item android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/profile"
        app:showAsAction="ifRoom"
        android:enabled="true"/>

</menu>