<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/menuConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/menu_height"
        android:layout_marginEnd="@dimen/three_point_width"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button3"
            style="@style/nav_button_style"
            android:layout_width="0dp"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:onClick="showAllTask"
            android:text="@string/all"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            style="@style/nav_button_style"

            android:layout_width="0dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/favorite"
            app:layout_constraintStart_toEndOf="@+id/button2"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            style="@style/nav_button_style"

            android:layout_width="0dp"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:text="@string/job"
            app:layout_constraintStart_toEndOf="@+id/button3"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menuConstraintLayout" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="start"
        app:itemBackground="@color/white"
        app:itemIconTint="@drawable/button_nav_colors"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/my_botton_menu" />

    <Button
        android:id="@+id/button4"
        style="@style/nav_button_style"
        android:layout_width="@dimen/plus_size"
        android:layout_height="@dimen/plus_size"
        android:layout_marginEnd="@dimen/plus_padding"
        android:layout_marginBottom="@dimen/plus_padding"
        android:onClick="clickNewTask"
        android:text="@string/plus"
        android:textSize="@dimen/plus_font_size"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="@dimen/three_point_width"
        android:layout_height="@dimen/three_point_height"
        android:text="Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>